# personal-finance-cli

./: .env.example  .gitignore  COMANDOS.md  Makefile  README.md  init_db.py  install.py  pyproject.toml  validate_project.py  validate_setup.py
src/: __init__.py  main.py
src/cli/: __init__.py  main.py  main_basic.py  main_complex.py
src/cli/commands/: __init__.py  budgets.py  investments.py  reports.py  transactions.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/services/: __init__.py  budget_service.py  investment_service.py  report_service.py  transaction_service.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_basic.py  test_budget_service.py  test_cli_transactions.py  test_investment_service.py  test_transaction_service.py
